--- a/apps/client/src/features/share/components/share.module.css
+++ b/apps/client/src/features/share/components/share.module.css
@@ -10,7 +10,6 @@
 .treeNode {
   text-decoration: none;
   user-select: none;
-  padding-bottom: 0;
 }
 
 .navbar,
